--- a/app/src/main/res/layout/fragment_getprofiledata.xml
+++ b/app/src/main/res/layout/fragment_getprofiledata.xml
@@ -27,14 +27,12 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
-                >
+                android:orientation="vertical" >
 
                 <android.support.design.widget.TextInputLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:id="@+id/textInputLayout_memberName"
-                    android:layout_toRightOf="@+id/imageView_email"
                     android:maxLines="1">
 
                 <android.support.design.widget.TextInputEditText
@@ -140,7 +138,7 @@
                         android:layout_marginLeft="10dp"            xmlns:card_view="http://schemas.android.com/apk/res-auto"
                         android:maxLines="1"
                         android:id="@+id/editText_jobDescription"
-                        android:hint="Designation"/>
+                        android:hint="Designation / Post Grad."/>
 
                 </android.support.design.widget.TextInputLayout>
 
@@ -158,7 +156,7 @@
                         android:layout_marginLeft="10dp"            xmlns:card_view="http://schemas.android.com/apk/res-auto"
                         android:maxLines="1"
                         android:id="@+id/editText_company"
-                        android:hint="Company"/>
+                        android:hint="Company / University"/>
 
                 </android.support.design.widget.TextInputLayout>
 
@@ -218,7 +216,6 @@
                     android:layout_height="wrap_content"
                     android:id="@+id/textInputLayout_locationHome"
                     android:layout_below="@+id/info_text"
-                    android:layout_toEndOf="@+id/textView_work"
                     android:layout_alignLeft="@+id/textView_memberDesignation"
                     android:layout_alignStart="@+id/textView_memberDesignation">
 
@@ -409,6 +406,7 @@
         <android.support.v7.widget.CardView
             android:layout_width="match_parent"
             android:layout_marginTop="5dp"
+            android:layout_marginBottom="10dp"
             android:layout_below="@id/card_view_contact"
             android:layout_height="wrap_content"
             android:padding="5dp">
