job details API integrated

--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -51,7 +51,7 @@
             android:layout_height="wrap_content"
             android:textSize="20sp"
             android:layout_gravity="center"
-            android:text="km"
+            android:text="km@gmail.com"
             android:inputType="textEmailAddress"
             android:id="@+id/editText_login_email"
             android:textColor="@android:color/white"
@@ -82,7 +82,7 @@
             android:layout_height="wrap_content"
             android:textSize="20sp"
             android:layout_gravity="center"
-            android:text="km"
+            android:text="ddddkm"
             android:inputType="textPassword"
             android:id="@+id/editText_login_password"
             android:textColor="@android:color/white"
