--- a/app/src/main/res/layout/fragment_getprofiledata.xml
+++ b/app/src/main/res/layout/fragment_getprofiledata.xml
@@ -27,7 +27,8 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical" >
+                android:orientation="vertical"
+                >
 
                 <android.support.design.widget.TextInputLayout
                     android:layout_width="match_parent"
