--- a/app/src/main/res/layout/fragment_post_job.xml
+++ b/app/src/main/res/layout/fragment_post_job.xml
@@ -47,10 +47,10 @@
 
                     <android.support.design.widget.TextInputEditText
                         android:layout_width="match_parent"
-                        android:layout_height="60dp"
+                        android:layout_height="wrap_content"
                         android:maxLines="1"
                         android:id="@+id/editText_companyDescription"
-                        android:hint="Description of Company"/>
+                        android:hint="Role"/>
 
                 </android.support.design.widget.TextInputLayout>
 
@@ -150,7 +150,8 @@
                     android:id="@+id/textView_Contact"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true"
-                    android:layout_marginTop="10dp" />
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="5dp" />
 
 
                 <android.support.design.widget.TextInputLayout
@@ -160,34 +161,9 @@
                     android:layout_toRightOf="@+id/imageView_email"
                     android:layout_below="@+id/textView_Contact">
 
-                    <android.support.design.widget.TextInputEditText
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="10dp"
-                        android:maxLines="1"
-                        android:inputType="textEmailAddress"
-                        android:id="@+id/editText_memberEmail"
-                        android:hint="e-mail address"/>
-
                 </android.support.design.widget.TextInputLayout>
 
-                <android.support.design.widget.TextInputLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/textView_website"
-                    android:layout_toRightOf="@+id/imageView_email"
-                    android:layout_below="@+id/textView_email_jobDetails">
 
-                    <android.support.design.widget.TextInputEditText
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="10dp"
-                        android:maxLines="1"
-                        android:inputType="phone"
-                        android:id="@+id/editText_companyPhone"
-                        android:hint="Phone Number"/>
-
-                </android.support.design.widget.TextInputLayout>
 
                 <android.support.design.widget.TextInputLayout
                     android:layout_width="match_parent"
@@ -196,38 +172,19 @@
                     android:layout_toRightOf="@+id/imageView_email"
                     android:layout_below="@+id/textView_website">
 
-                    <android.support.design.widget.TextInputEditText
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="10dp"
-                        android:maxLines="1"
-                        android:inputType="textWebEditText"
-                        android:id="@+id/editText_companyWebLink"
-                        android:hint="Web Links"/>
-
                 </android.support.design.widget.TextInputLayout>
 
 
                 <com.mikepenz.iconics.view.IconicsImageView
                     android:layout_width="20dp"
                     android:layout_height="20dp"
-                    android:id="@+id/imageView_phone"
-                    app:iiv_icon="faw-phone"
-                    app:iiv_color="@color/black_de"
-                    android:layout_alignTop="@+id/textView_website"
-                    android:layout_toLeftOf="@+id/textView_website"
-                    android:layout_toStartOf="@+id/textView_website"
-                    android:layout_marginTop="20dp" />
-                <com.mikepenz.iconics.view.IconicsImageView
-                    android:layout_width="20dp"
-                    android:layout_height="20dp"
                     android:id="@+id/imageView_email"
                     app:iiv_icon="faw-envelope"
                     app:iiv_color="@color/black_de"
-                    android:layout_alignTop="@+id/textView_email_jobDetails"
+                    android:layout_alignTop="@+id/editText_memberEmail"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true"
-                    android:layout_marginTop="20dp" />
+                    android:layout_marginTop="10dp" />
 
                 <com.mikepenz.iconics.view.IconicsImageView
                     android:layout_width="20dp"
@@ -235,10 +192,34 @@
                     android:id="@+id/icon_webLink"
                     app:iiv_icon="faw-link"
                     app:iiv_color="@color/black_de"
+                    android:layout_alignTop="@+id/editText_companyWebLink"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true"
-                    android:layout_below="@+id/textView_website"
-                    android:layout_marginTop="20dp" />
+                    android:layout_marginTop="10dp" />
+
+                <android.support.design.widget.TextInputEditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:maxLines="1"
+                    android:inputType="textWebEditText"
+                    android:id="@+id/editText_companyWebLink"
+                    android:hint="Web Links"
+                    android:layout_below="@+id/textView_Contact"
+                    android:layout_toRightOf="@+id/icon_webLink"
+                    android:layout_toEndOf="@+id/icon_webLink" />
+
+                <android.support.design.widget.TextInputEditText
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:maxLines="1"
+                    android:inputType="textEmailAddress"
+                    android:id="@+id/editText_memberEmail"
+                    android:hint="e-mail address"
+                    android:layout_below="@+id/editText_companyWebLink"
+                    android:layout_alignParentRight="true"
+                    android:layout_alignParentEnd="true"
+                    android:layout_toRightOf="@+id/icon_webLink"
+                    android:layout_toEndOf="@+id/icon_webLink" />
 
 
             </RelativeLayout>
