--- a/app/src/main/res/layout/fragment_getprofiledata.xml
+++ b/app/src/main/res/layout/fragment_getprofiledata.xml
@@ -162,56 +162,14 @@
                 </android.support.design.widget.TextInputLayout>
 
 
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Post Graduation"
-                    android:id="@+id/pg"
-                    android:layout_marginTop="5dp"
-                    android:textAppearance="?android:textAppearanceMedium"
-                    android:layout_below="@id/textView_company"/>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Course"
-                    android:id="@+id/textView_Course"
-                    android:layout_marginTop="5dp"
-                    android:textAppearance="?android:textAppearanceMedium"
-                    android:layout_below="@id/pg"/>
-
-                <EditText
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/editText_course"
-                    android:singleLine="true"
-                    android:layout_marginTop="5dp"
-                    android:layout_below="@id/textView_Course"/>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Institution"
-                    android:id="@+id/textView_univ"
-                    android:layout_marginTop="5dp"
-                    android:textAppearance="?android:textAppearanceMedium"
-                    android:layout_below="@id/editText_course"/>
-
-                <EditText
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/editText_univ"
-                    android:singleLine="true"
-                    android:layout_marginTop="5dp"
-                    android:layout_below="@id/textView_univ"/>
-
                 <TextView
                     android:id="@+id/info_text"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceMedium"
-                    android:layout_below="@id/editText_univ"
                     android:text="@string/location"
-                    android:layout_marginTop="5dp" />
+                    android:layout_marginTop="5dp"
+                    android:layout_below="@id/textView_company" />
                 <android.support.design.widget.TextInputLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -235,7 +193,6 @@
                     android:layout_height="wrap_content"
                     android:id="@+id/textInputLayout_CurrentLocation"
                     android:layout_below="@+id/textInputLayout_locationHome"
-                    android:layout_toEndOf="@+id/textView_Course"
                     android:layout_alignLeft="@+id/textInputLayout_locationHome"
                     android:layout_alignStart="@+id/textInputLayout_locationHome">
 
@@ -418,7 +375,7 @@
                 android:text="Save Changes"
                 style="?android:attr/borderlessButtonStyle"
                 android:textAlignment="center"
-                android:id="@+id/button_save" />
+                android:id="@+id/button_save_profile_data" />
         </android.support.v7.widget.CardView>
 
 
