--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -73,7 +73,7 @@
         <com.mikepenz.iconics.view.IconicsImageView
             android:layout_width="30dp"
             android:layout_height="30dp"
-            app:iiv_icon="faw-envelope"
+            app:iiv_icon="faw-lock"
             android:layout_gravity="center"
             app:iiv_color="@color/card_background"
             android:layout_marginLeft="3dp" />
