--- a/app/src/main/res/layout/sign_up.xml
+++ b/app/src/main/res/layout/sign_up.xml
@@ -19,7 +19,7 @@
             <com.mikepenz.iconics.view.IconicsImageView
                 android:layout_width="30dp"
                 android:layout_height="30dp"
-                app:iiv_icon="faw-envelope"
+                app:iiv_icon="faw-user"
                 android:layout_marginLeft="3dp"
                 app:iiv_color="@color/card_background"/>
             <EditText
@@ -68,7 +68,7 @@
             <com.mikepenz.iconics.view.IconicsImageView
                 android:layout_width="30dp"
                 android:layout_height="30dp"
-                app:iiv_icon="faw-envelope"
+                app:iiv_icon="faw-lock"
                 android:layout_marginLeft="3dp"
                 app:iiv_color="@color/card_background"/>
             <EditText
@@ -93,7 +93,7 @@
             <com.mikepenz.iconics.view.IconicsImageView
                 android:layout_width="30dp"
                 android:layout_height="30dp"
-                app:iiv_icon="faw-envelope"
+                app:iiv_icon="faw-lock"
                 android:layout_marginLeft="3dp"
                 app:iiv_color="@color/card_background"/>
             <EditText
