--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -3,6 +3,7 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:padding="@dimen/activity_horizontal_margin"
+    android:id="@+id/relativeLayout_login"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
