signup complete + temp text + back pressed working

--- a/app/src/main/res/layout/sign_up.xml
+++ b/app/src/main/res/layout/sign_up.xml
@@ -29,6 +29,7 @@
                 android:textSize="20sp"
                 android:layout_gravity="center"
                 android:inputType="text"
+                android:text="hbkhb"
                 android:id="@+id/editText_signup_name"
                 android:textColor="@android:color/white"
                 android:background="@android:color/transparent"
@@ -52,7 +53,7 @@
                 android:layout_height="wrap_content"
                 android:textSize="20sp"
                 android:layout_gravity="center"
-                android:text=""
+                android:text="hbkhb@g.com"
                 android:inputType="textEmailAddress"
                 android:id="@+id/editText_signup_email"
                 android:textColor="@android:color/white"
@@ -77,7 +78,7 @@
                 android:layout_height="wrap_content"
                 android:textSize="20sp"
                 android:layout_gravity="center"
-                android:text=""
+                android:text="hbkhb"
                 android:inputType="textPassword"
                 android:id="@+id/editText_signup_password"
                 android:textColor="@android:color/white"
@@ -102,7 +103,7 @@
                 android:layout_height="wrap_content"
                 android:textSize="20sp"
                 android:layout_gravity="center"
-                android:text=""
+                android:text="hbkhb"
                 android:inputType="textPassword"
                 android:id="@+id/editText_signup_passwordConfirm"
                 android:textColor="@android:color/white"
