--- a/app/src/main/res/layout/fragment_getprofiledata.xml
+++ b/app/src/main/res/layout/fragment_getprofiledata.xml
@@ -58,7 +58,8 @@
                         android:layout_marginLeft="10dp"
                         android:maxLines="1"
                         android:id="@+id/editText_memberBio"
-                        android:hint="About Yourself"/>
+                        android:hint="About Yourself"
+                        android:text="ABOUT MYself" />
 
                 </android.support.design.widget.TextInputLayout>
 
@@ -164,7 +165,8 @@
                         android:layout_marginLeft="10dp"            xmlns:card_view="http://schemas.android.com/apk/res-auto"
                         android:maxLines="1"
                         android:id="@+id/editText_jobDescription"
-                        android:hint="Designation / Post Grad."/>
+                        android:hint="Designation / Post Grad."
+                        android:text="CRO" />
 
                 </android.support.design.widget.TextInputLayout>
 
@@ -182,7 +184,8 @@
                         android:layout_marginLeft="10dp"            xmlns:card_view="http://schemas.android.com/apk/res-auto"
                         android:maxLines="1"
                         android:id="@+id/editText_company"
-                        android:hint="Company / University"/>
+                        android:hint="Company / University"
+                        android:text="mycom" />
 
                 </android.support.design.widget.TextInputLayout>
 
@@ -209,7 +212,8 @@
                         android:layout_marginLeft="10dp"
                         android:maxLines="1"
                         android:id="@+id/editText_locationHome"
-                        android:hint="Home Town"/>
+                        android:hint="Home Town"
+                        android:text="gbp" />
 
                 </android.support.design.widget.TextInputLayout>
 
@@ -228,7 +232,8 @@
                         android:maxLines="1"
 
                         android:id="@+id/editText_locationWork"
-                        android:hint="Company"/>
+                        android:hint="Company"
+                        android:text="bhl" />
 
                 </android.support.design.widget.TextInputLayout>
 
@@ -324,7 +329,8 @@
                         android:inputType="phone"
                         android:maxLines="1"
                         android:id="@+id/editText_memberPhone"
-                        android:hint="Phone Number"/>
+                        android:hint="Phone Number"
+                        android:text="584" />
 
                 </android.support.design.widget.TextInputLayout>
 
@@ -342,7 +348,8 @@
                         android:maxLines="1"
                         android:inputType="textWebEditText"
                         android:id="@+id/editText_memberWebLink"
-                        android:hint="Web Links"/>
+                        android:hint="Web Links"
+                        android:text="khghv" />
 
                 </android.support.design.widget.TextInputLayout>
 
