--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -57,14 +57,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="BIO BIO BIO BIO BIO BIO  BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BiIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO BIO "
+            android:text="BIO"
             android:id="@+id/textView_bio"
             android:layout_below="@+id/textView_branch"
-            android:layout_alignRight="@+id/textView_year"
-            android:layout_alignEnd="@+id/textView_year"
-            android:layout_marginTop="5dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp" />
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginLeft="10dp" />
 
 
 
@@ -265,7 +263,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceMedium"
-                    android:text="Phone"
+                    android:text=""
                     android:clickable="true"
                     android:id="@+id/textView_contact"
                     android:layout_below="@+id/textView_fbLink"
